--- a/ru.lproj/Localizable.strings
+++ b/ru.lproj/Localizable.strings
@@ -24,5 +24,7 @@
 "question-save-form" = "Сохранить";
 "question-cancel-form" = "Отмена";
 
-"have_voted" = "Вы уж голосовали за данный вопрос с таким результатом";
+"question-form-error-blank" = "не может быть пустым";
+
+"have_voted" = "Вы уже голосовали за данный вопрос с таким результатом";
 "question_complaint" = "В ближайшее время данный контент будет рассмотрен администраторами. Спасибо!";
