--- a/ru.lproj/Localizable.strings
+++ b/ru.lproj/Localizable.strings
@@ -21,6 +21,9 @@
 "question-category" = "Категория";
 "question-tags" = "Теги";
 
+"question-edit" = "Редактировать";
+"question-destroy" = "Удалить";
+
 "question-save-form" = "Сохранить";
 "question-cancel-form" = "Отмена";
 
@@ -28,3 +31,8 @@
 
 "have_voted" = "Вы уже голосовали за данный вопрос с таким результатом";
 "question_complaint" = "В ближайшее время данный контент будет рассмотрен администраторами. Спасибо!";
+
+
+/*ANSWERS*/
+
+"empty_answers_list" = "Ответов на данный вопрос нет";
