--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -7,6 +7,7 @@
 */
 /*COMMON*/
 "system-message-title" = "Message";
+"server-connection-disabled" = "Could not connect to server";
 
 /*SIDEBAR*/
 "sidebar-profile" = "My profile";
