--- a/ru.lproj/Localizable.strings
+++ b/ru.lproj/Localizable.strings
@@ -7,6 +7,7 @@
 */
 /*COMMON*/
 "system-message-title" = "Сообщение";
+"server-connection-disabled" = "Не могу подключиться к серверу";
 
 /*SIDEBAR*/
 "sidebar-profile" = "Мой профиль";
